Complete exercise 2 of css foundations
Edit html elements with css
Edit css file with the correct classes and id's

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd-numbers  {
+    background-color: rgb(248, 141, 141);
+    font-family: "Verdana DejaVu Sans", sans-serif;
+}
+
+#blue  {
+    color: rgb(0, 0, 255);
+    font-size: 36px;
+}
+
+.third {
+    font-size: 24px;
+}
+
+#fourth {
+    background-color: rgb(112, 243, 112);
+    font-size: 24px;
+    font-weight: bold;
+}
