--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,7 +2,7 @@
 
 .odd-numbers  {
     background-color: rgb(248, 141, 141);
-    font-family: "Verdana DejaVu Sans", sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 #blue  {
