--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,41 @@
-/* Add CSS Styling */
+.first, /*second try */
+.second {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+.first {
+    background-color: black;
+    color: white;
+}
+.second {
+    background-color: yellow;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* FIRST TRY!!!
+.both   {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+.first {
+    background-color: black;
+    color: white;
+}
+
+.second {
+    background-color: yellow;
+}
+*/
